# starlette-log-requests-middleware

./: LogRequestsMiddleware.py  pyproject.toml
starlette_log_requests_middleware/: __init__.py  middleware.py
tests/: test_end_to_end.py
