[tool.poetry]
name = "starlette-log-requests-middleware"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
requests = "^2.25.1"
testfixtures = "^6.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
